--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,145 +1,196 @@
 {% load static %}
 
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Example</title>
+        <title>Task Detail | Highdmin - Responsive Admin Dashboard Template</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+        <meta content="Coderthemes" name="author" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        
+		<!-- App css -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
         <link href="{% static 'css/app.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
         
-        <link href="{% static 'css/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" />
-        <link href="{% static 'css/app-dark.min.css' %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
+        <link href="{% static 'css/app-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
 
+		<!-- icons -->
 		<link href="{% static '/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
 
     </head>
 
-    <body class="loading">
+    <body class="loading" data-layout-mode="horizontal" data-layout='{"mode": "light", "width": "fluid", "menuPosition": "fixed", "topbar": {"color": "light"}, "showRightSidebarOnPageLoad": true}'>
+
+        <!-- Begin page -->
         <div id="wrapper">
 
-            <div class="left-side-menu">
-
-                <div class="logo-box">
-                    <a href="{% url 'index' %}" class="logo logo-dark text-center">
-                        <span class="logo-sm">
-                            <!-- <img src="#" alt="" height="24"> -->
-                            <h4>Logo</h4>
-                        </span>
-                        <span class="logo-lg">
-                            <!-- <img src="#" alt="" height="24"> -->
-                            <h4>Logo</h4>
-                        </span>
-                    </a>
-
-                    <a href="{% url 'index' %}" class="logo logo-light text-center">
-                        <span class="logo-sm">
-                            <img src="#" alt="" height="24">
-                        </span>
-                        <span class="logo-lg">
-                            <img src="#" alt="" height="22">
-                        </span>
-                    </a>
-                </div>
-
-                <div class="h-100" data-simplebar>
-
-                    <div class="user-box text-center">
-                        <img src="../static/images/users/avatar.png" alt="user-img" title="Mat Helme"
-                            class="rounded-circle avatar-md">
-                        <p class="text-muted">User admin</p>
-                    </div>
-
-                    <div id="sidebar-menu">
-                        <ul id="side-menu">
-
-                            <li class="menu-title">Navigation</li>
-
-                            <li>
-                                <a href="{% url 'index' %}">
-                                    <i class="fe-airplay"></i>
-                                    <!-- <span class="badge badge-danger float-right">3</span> -->
-                                    <span> Dashboard </span>
-                                </a>
-                            </li>
-
-                            <!-- <li>
-                                <a href="#sidebarApps" data-toggle="collapse">
-                                    <i class="fe-layers"></i>
-                                    <span> Donantes </span>
-                                    <span class="menu-arrow"></span>
+            <!-- Topbar Start -->
+            <div class="navbar-custom">
+                <div class="container-fluid">
+    
+                    <ul class="list-unstyled topnav-menu float-right mb-0">
+    
+                        <li class="dropdown notification-list topbar-dropdown">
+                            <a class="nav-link dropdown-toggle nav-user mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
+                                <img src="{% static 'images/users/avatar.png' %}" alt="user-image" class="rounded-circle">
+                                <span>
+                                    User Admin <i class="mdi mdi-chevron-down"></i> 
+                                </span>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
+                                <!-- item-->
+                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                    <i class="fe-user"></i>
+                                    <span>My Account</span>
                                 </a>
 
-                                <div class="collapse" id="sidebarApps">
-                                    <ul class="nav-second-level">
-                                        <li><a href="apps-calendar.html">Calendar</a></li>
-                                        <li><a href="apps-tickets.html">Tickets</a></li>
-                                        <li><a href="apps-taskboard.html">Task Board</a></li>
-                                        <li><a href="apps-task-detail.html">Task Detail</a></li>
-                                        <li><a href="apps-contacts.html">Contacts</a></li>
-                                        <li><a href="apps-projects.html">Projects</a></li>
-                                        <li><a href="apps-companies.html">Companies</a></li>
-                                        <li><a href="apps-file-manager.html">File Manager</a></li>
-                                    </ul>
-                                </div>
-                            </li> -->
+                                <div class="dropdown-divider"></div>
 
-                            <li>
-                                <a href="{% url 'donantes' %}">
-                                    <i class="fe-airplay"></i>
-                                    <span> Donantes </span>
+                                <!-- item-->
+                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                    <i class="fe-log-out"></i>
+                                    <span>Logout</span>
                                 </a>
-                            </li>
-
-                            <li>
-                                <a href="{% url 'donaciones' %}">
-                                    <i class="fe-airplay"></i>
-                                    <span> Donaciones </span>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="{% url 'circulos' %}">
-                                    <i class="fe-airplay"></i>
-                                    <span> Circulos </span>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="{% url 'administracion' %}">
-                                    <i class="fe-airplay"></i>
-                                    <span> Administración </span>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="{% url 'alianzas' %}">
-                                    <i class="fe-airplay"></i>
-                                    <span> Alianzas estratégicas </span>
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                    <div class="clearfix"></div>
+                            </div>
+                        </li>
+                    </ul>
+                    
                 </div>
             </div>
+            <!-- end Topbar -->
+
+            <div class="topnav">
+                <div class="container-fluid">
+                    <nav class="navbar navbar-light navbar-expand-lg topnav-menu">
+
+                        <div class="collapse navbar-collapse" id="topnav-menu-content">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'index' %}">
+                                        <i class="fe-airplay mr-1"></i> Dashboard
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'administracion' %}">
+                                        <i class="fe-airplay mr-1"></i> Administracion
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'alianzas' %}">
+                                        <i class="fe-airplay mr-1"></i> Alianzas
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'donaciones' %}">
+                                        <i class="fe-airplay mr-1"></i> Donaciones
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'donantes' %}">
+                                        <i class="fe-airplay mr-1"></i> Donantes
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'circulos' %}">
+                                        <i class="fe-airplay mr-1"></i> Circulos
+                                    </a>
+                                </li>
+
+                                
+
+                            </ul> <!-- end navbar-->
+                        </div> <!-- end .collapsed-->
+                    </nav>
+                </div> <!-- end container-fluid -->
+            </div> <!-- end topnav-->
+
+            <!-- ============================================================== -->
+            <!-- Start Page Content here -->
+            <!-- ============================================================== -->
 
             <div class="content-page">
+                
                 <div class="content">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="card-body">
-                                <h4 class="header-title">Dashboard</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
+                    <div class="container-fluid">
+
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="page-title-box-hori">
+                                    <h4 class="page-title">Dashboard</h4>
+                                </div>
+                            </div>
+                        </div>     
+                        
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <div class="card task-detail">
+                                    <div class="card-body">
+                                        <div class="media mt-0 mb-4">
+                                            <img class="d-flex mr-3 rounded-circle avatar-md" alt="64x64" src="{% static 'images/users/avatar.png' %}">
+                                            <div class="media-body">
+                                                <h5 class="media-heading mt-0">User Admin</h5>
+                                            </div>
+                                        </div>
+    
+                                        <h4>Dashboard</h4>
+                                    </div>
+                                </div>
+                            </div><!-- end col -->
+
+                            <div class="col-lg-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="header-title mb-4">Actividades</h4>
+
+                                        <div>
+    
+                                            <div class="media mb-3">
+                                                <div class="d-flex mr-3">
+                                                    <a href="#">  </a>
+                                                </div>
+                                                <div class="media-body">
+                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
+                                                    <p class="font-13 text-muted mb-0">
+                                                        Actividad número 1
+                                                    </p>
+                                                </div>
+
+                                                <div class="media-body">
+                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
+                                                    <p class="font-13 text-muted mb-0">
+                                                        Actividad número 2
+                                                    </p>
+                                                </div>
+
+                                                <div class="media-body">
+                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
+                                                    <p class="font-13 text-muted mb-0">
+                                                        Actividad número 3
+                                                    </p>
+                                                </div>
+                                            </div>
+    
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!-- end col -->
+                        </div>
+                        <!-- end row -->
+
+                    </div> <!-- container-fluid -->
+
+                </div> <!-- content -->
+
+                <!-- Footer Start -->
                 <footer class="footer">
                     <div class="container-fluid">
                         <div class="row">
@@ -149,12 +200,28 @@
                         </div>
                     </div>
                 </footer>
+                <!-- end Footer -->
 
             </div>
 
+            <!-- ============================================================== -->
+            <!-- End Page content -->
+            <!-- ============================================================== -->
+
+
         </div>
-        
+        <!-- END wrapper -->
+
+        <!-- Right bar overlay-->
+        <div class="rightbar-overlay"></div>
+
+        <!-- Vendor js -->
         <script src="{% static 'js/vendor.min.js' %}"></script>
+
+        <!-- Plugins Js -->
+        <script src="{% static 'libs/@adactive/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
+
+        <!-- App js -->
         <script src="{% static 'js/app.min.js' %}"></script>
         
     </body>
