--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,25 +4,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Task Detail | Highdmin - Responsive Admin Dashboard Template</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
-        <meta content="Coderthemes" name="author" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        
-		<!-- App css -->
+        <title>Dashboard</title>
+
+        <!-- App css -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
-        <link href="{% static 'css/app.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
         
-        <link href="{% static 'css/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
-        <link href="{% static 'css/app-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
+        
+        <link href="{% static 'css/bootstrap-dark.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/app-dark.css' %}" rel="stylesheet" type="text/css" />
 
 		<!-- icons -->
 		<link href="{% static '/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
 
     </head>
 
-    <body class="loading" data-layout-mode="horizontal" data-layout='{"mode": "light", "width": "fluid", "menuPosition": "fixed", "topbar": {"color": "light"}, "showRightSidebarOnPageLoad": true}'>
+    <body class="loading" data-layout-mode="horizontal">
 
         <!-- Begin page -->
         <div id="wrapper">
@@ -75,14 +71,8 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'administracion' %}">
-                                        <i class="fe-airplay mr-1"></i> Administracion
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'alianzas' %}">
-                                        <i class="fe-airplay mr-1"></i> Alianzas
+                                    <a class="nav-link" href="{% url 'donantes' %}">
+                                        <i class="fe-airplay mr-1"></i> Donantes
                                     </a>
                                 </li>
 
@@ -93,14 +83,14 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'donantes' %}">
-                                        <i class="fe-airplay mr-1"></i> Donantes
+                                    <a class="nav-link" href="{% url 'circulos' %}">
+                                        <i class="fe-airplay mr-1"></i> Circulos
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'circulos' %}">
-                                        <i class="fe-airplay mr-1"></i> Circulos
+                                    <a class="nav-link" href="{% url 'alianzas' %}">
+                                        <i class="fe-airplay mr-1"></i> Alianzas estratégicas
                                     </a>
                                 </li>
 
@@ -165,14 +155,14 @@
                                                 </div>
 
                                                 <div class="media-body">
-                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
+                                                    <h5 class="mt-0 font-13">Actividad 2</h5>
                                                     <p class="font-13 text-muted mb-0">
                                                         Actividad número 2
                                                     </p>
                                                 </div>
 
                                                 <div class="media-body">
-                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
+                                                    <h5 class="mt-0 font-13">Actividad 3</h5>
                                                     <p class="font-13 text-muted mb-0">
                                                         Actividad número 3
                                                     </p>
@@ -216,13 +206,13 @@
         <div class="rightbar-overlay"></div>
 
         <!-- Vendor js -->
-        <script src="{% static 'js/vendor.min.js' %}"></script>
+        <script src="{% static 'js/vendor.js' %}"></script>
 
         <!-- Plugins Js -->
         <script src="{% static 'libs/@adactive/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
 
         <!-- App js -->
-        <script src="{% static 'js/app.min.js' %}"></script>
+        <script src="{% static 'js/app.js' %}"></script>
         
     </body>
 </html>
