--- a/templates/circulos.html
+++ b/templates/circulos.html
@@ -10,11 +10,12 @@
         <meta content="Coderthemes" name="author" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
-        <link href="{% static 'css/app.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
-        
-        <link href="{% static 'css/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
-        <link href="{% static 'css/app-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
+        <!-- App css -->
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
+		<link href="{% static 'css/app.min.css' %}" rel="stylesheet" type="text/css" id="app-default-stylesheet" />
+
+		<link href="{% static 'css/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-dark-stylesheet" />
+		<link href="{% static 'css/app-dark.min.css' %}" rel="stylesheet" type="text/css" id="app-dark-stylesheet" />
 
 		<link href="{% static '/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
 
@@ -564,10 +565,10 @@
         <!-- Vendor js -->
 
         
-        <script src="{% static 'js/vendor.min.js' %}"></script>
-        <script src="{% static 'ibs/jquery-ui/jquery-ui.min.js' %}"></script>
-        <script src="{% static 'js/pages/taskboard.init.js' %}"></script>
-        <script src="{% static 'js/app.min.js' %}"></script>
+        <script src="{% static '/js/vendor.min.js' %}"></script>
+        <script src="{% static '/ibs/jquery-ui/jquery-ui.min.js' %}"></script>
+        <script src="{% static '/js/pages/taskboard.init.js' %}"></script>
+        <script src="{% static '/js/app.min.js' %}"></script>
         
     </body>
 </html>
