--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,24 +1,27 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Dashboard</title>
+        <title>Buttons | Highdmin - Responsive Admin Dashboard Template</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+        <meta content="Coderthemes" name="author" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- App favicon -->
 
-        <!-- App css -->
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
-        
-        
-        <link href="{% static 'css/bootstrap-dark.css' %}" rel="stylesheet" type="text/css" />
-        <link href="{% static 'css/app-dark.css' %}" rel="stylesheet" type="text/css" />
+		<!-- App css -->
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
+		<link href="{% static 'css/app.min.css' %}" rel="stylesheet" type="text/css" id="app-default-stylesheet" />
 
-		<!-- icons -->
+		<link href="{% static 'css/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" id="bs-dark-stylesheet" />
+		<link href="{% static 'css/app-dark.min.css' %}" rel="stylesheet" type="text/css" id="app-dark-stylesheet" />
+
 		<link href="{% static '/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
 
     </head>
 
-    <body class="loading" data-layout-mode="horizontal">
+    <body class="loading" data-layout-mode="horizontal" data-layout='{"mode": "light", "width": "fluid", "menuPosition": "fixed", "topbar": {"color": "light"}, "showRightSidebarOnPageLoad": true}'>
 
         <!-- Begin page -->
         <div id="wrapper">
@@ -71,8 +74,14 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'donantes' %}">
-                                        <i class="fe-airplay mr-1"></i> Donantes
+                                    <a class="nav-link" href="{% url 'administracion' %}">
+                                        <i class="fe-airplay mr-1"></i> Administracion
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'alianzas' %}">
+                                        <i class="fe-airplay mr-1"></i> Alianzas
                                     </a>
                                 </li>
 
@@ -83,14 +92,14 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'circulos' %}">
-                                        <i class="fe-airplay mr-1"></i> Circulos
+                                    <a class="nav-link" href="{% url 'donantes' %}">
+                                        <i class="fe-airplay mr-1"></i> Donantes
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'alianzas' %}">
-                                        <i class="fe-airplay mr-1"></i> Alianzas estratégicas
+                                    <a class="nav-link" href="{% url 'circulos' %}">
+                                        <i class="fe-airplay mr-1"></i> Circulos
                                     </a>
                                 </li>
 
@@ -155,14 +164,14 @@
                                                 </div>
 
                                                 <div class="media-body">
-                                                    <h5 class="mt-0 font-13">Actividad 2</h5>
+                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
                                                     <p class="font-13 text-muted mb-0">
                                                         Actividad número 2
                                                     </p>
                                                 </div>
 
                                                 <div class="media-body">
-                                                    <h5 class="mt-0 font-13">Actividad 3</h5>
+                                                    <h5 class="mt-0 font-13">Actividad 1</h5>
                                                     <p class="font-13 text-muted mb-0">
                                                         Actividad número 3
                                                     </p>
@@ -205,14 +214,19 @@
         <!-- Right bar overlay-->
         <div class="rightbar-overlay"></div>
 
-        <!-- Vendor js -->
-        <script src="{% static 'js/vendor.js' %}"></script>
-
-        <!-- Plugins Js -->
-        <script src="{% static 'libs/@adactive/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
-
-        <!-- App js -->
-        <script src="{% static 'js/app.js' %}"></script>
         
     </body>
+  
+
+    <!-- Vendor js -->
+    <script src="{% static '/js/vendor.min.js' %}"></script>
+
+    <script src="{% static '/libs/@adactive/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
+
+    <!-- App js -->
+    <script src="{% static '/js/app.min.js' %}"></script>
+
+
+    
+
 </html>
